--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -31,6 +31,8 @@
     </nav>
     <header class="header-flex">
         <div class="header-flex header-back">
+            <div class="overlayer">
+
             <h2>ETIAM MAURIS TORTOR, PHARETRA QUIS LOBORTIS IN, PHARETRA IN DIAM</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat perspiciatis accusantium atque!
                 Doloribus, repellendus. Cupiditate qui id voluptatem mollitia. Veniam vitae recusandae molestias nostrum
@@ -39,6 +41,7 @@
                 quis quo facilis voluptates nostrum, illo perspiciatis omnis accusantium odio ipsam corrupti eveniet?
             </p>
             <button>READ MORE</button>
+            </div>
         </div>
         <div class="header-flex header-frame">
             <div class="header-overlay">
